feat: added workspaceName (#21)
